--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,4 +20,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/mysql-connector-java-3.0.17-ga-bin.jar')
 }
