added a move generator, which for now has no sophistication. the move is sent to the server wrapped in a request and a response comes back.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     // added by jm
     // added by jm
     compile files('libs/wordwolf_shared_objects.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
